--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -863,7 +863,7 @@
 .testimonials
 {
     position: relative;
-    z-index: 999;
+    // z-index: 999;
 
     @include responsive(phone)
     {
